<resources>
    <!--  アプリケーション名  -->
    <string name="app_name">MarkCalendar</string>

    <!--  サンプル  -->
    <string name="sample_date">10</string>a
    <string name="sample_num">10</string>a
    <string name="sample">Sample</string>

    <!--  カレンダー画面  -->
    <string name="no_mark">No Mark</string>

    <!--  カレンダー画面（マーク未登録時の操作誘導）  -->
    <string name="no_mark_title">No Mark Registration</string>
    <string name="no_mark_content">The mark is not registered. \nLet\'s register the mark first.</string>
    <string name="no_mark_induction_button">Register the mark.</string>

    <!--  曜日  -->
    <string name="week_sunday">Sun</string>
    <string name="week_monday">Mon</string>
    <string name="week_tuesday">Tue</string>
    <string name="week_wednesday">Wed</string>
    <string name="week_thursday">Thu</string>
    <string name="week_friday">Fri</string>
    <string name="week_saturday">Sat</string>

    <!--  マーク数  -->
    <string name="mark_slash">／</string>
    <string name="mark_init_num">0</string>
    <string name="mark_unit">Marks</string>
    <string name="mark_ratio_unit">%</string>
    <string name="mark_total">Total</string>

    <!--  マークリスト画面  -->
    <string name="craate_mark">New</string>
    <string name="craate_mark_hint">Mark Name (max 16 text)</string>

    <!--  マークリスト画面（マーク削除ダイアログ）  -->
    <string name="delete_mark_title">Deletion confirmation</string>
    <string name="delete_mark_content">All marks on the calendar will also be deleted.\nDo you really want to delete this?</string>

    <!--  ボタン  -->
    <string name="positive">OK</string>
    <string name="negative">CANCEL</string>

    <!--  ツールバータイトル  -->
    <string name="title_mark_list">Mark List</string>
    <string name="title_mark_entry">Mark Registration</string>
    <string name="title_mark_statistic">Mark\'s statistics</string>

    <!--  オプションメニュー  -->
    <string name="optionMenu_changeMark">Select Mark</string>
    <string name="optionMenu_toMarkList">To the Mark List</string>
    <string name="optionMenu_help">Help</string>
    <string name="optionMenu_licenses">Licenses</string>

    <!--  ヘルプダイアログ  -->
    <string name="help_title">Operation Guide</string>
    <string name="help_annotation">This content can be viewed at any time from the "?" Icon at the top right of the screen.</string>
    <string name="help_mark">＜Mark / Remove the calendar＞</string>
    <string name="help_explanation_mark">Double tap the date.</string>
    <string name="help_under_calendar">Flick operation under the calendar</string>
    <string name="help_under_calendar_annotation">In the area under the calendar, the following flick operations are possible.</string>
    <string name="help_change_month">＜Change the referenced month＞</string>
    <string name="help_explanation_flick_hor">Flick (left and right)</string>
    <string name="help_change_mark">＜Change the selected mark＞</string>
    <string name="help_explanation_flick_ver">Flick (up and down)</string>
    <string name="help_show_list">＜Display mark list screen＞</string>
    <string name="help_explanation_double_tap">Double tap</string>

    <!--  トースト  -->
    <string name="toast_no_mark_name">Please enter the mark name.</string>

    <!-- Admod（アプリID） -->
    <string name="admob_app_id">ca-app-pub-8046295810838892~9587230341</string>

    <!-- リリース時とテスト時で切り替える -->
    <!--  テストID（バナー広告）  -->
<!--
    <string name="admob_unit_id">ca-app-pub-3940256099942544/6300978111</string>
-->
    <!-- リリース用 -->
    <string name="admob_unit_id">ca-app-pub-8046295810838892/1749102926</string>


</resources>