<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/substitute_light"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:paddingTop="60dp"
            android:paddingLeft="44dp"
            android:paddingRight="44dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textStyle="bold"
                android:textColor="@color/substitute_dark"
                android:textSize="24sp"
                android:text="@string/help_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:textColor="@color/substitute_dark"
                android:textSize="12sp"
                android:text="@string/help_annotation" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textStyle="bold"
                android:textColor="@color/substitute_dark"
                android:text="@string/help_mark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColor="@color/substitute_dark"
                android:textSize="12sp"
                android:text="@string/help_explanation_mark" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:srcCompat="@drawable/baseline_touch_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:textStyle="bold"
                android:textColor="@color/substitute_dark"
                android:text="@string/help_under_calendar" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:textColor="@color/substitute_dark"
                android:textSize="12sp"
                android:text="@string/help_under_calendar_annotation" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:textStyle="bold"
                android:textColor="@color/substitute_dark"
                android:text="@string/help_change_month" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColor="@color/substitute_dark"
                android:textSize="12sp"
                android:text="@string/help_explanation_flick_hor" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:srcCompat="@drawable/baseline_swipe_horizon_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:textStyle="bold"
                android:textColor="@color/substitute_dark"
                android:text="@string/help_change_mark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColor="@color/substitute_dark"
                android:textSize="12sp"
                android:text="@string/help_explanation_flick_ver" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:srcCompat="@drawable/baseline_swipe_vertical_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:textStyle="bold"
                android:textColor="@color/substitute_dark"
                android:text="@string/help_show_list" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColor="@color/substitute_dark"
                android:textSize="12sp"
                android:text="@string/help_explanation_double_tap" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                app:srcCompat="@drawable/baseline_touch_24" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>