<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/substitute_light"
    tools:context=".MarkStatisticsActivity">

    <!--  ツールバー  -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@color/primary"
        android:theme="@style/ToolbarTheme"
        app:titleTextAppearance="@style/Toolbar.TitleText"/>

    <!--  月ごとのマーク数  -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_monthList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!--  トータル  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="28dp"
        android:orientation="horizontal"
        android:gravity="center|bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/mark_total"
            android:textColor="@color/substitute_dark"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/sample_num"
            android:textColor="@color/substitute_dark"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mark_unit"
            android:textColor="@color/substitute_dark"
            android:textSize="16sp"/>

    </LinearLayout>

    <!-- バナー広告 -->
    <com.google.android.gms.ads.AdView
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/admob_unit_id"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

</LinearLayout>