<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/substitute_middle">

    <!--  ツールバー  -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@color/primary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:menu="@menu/toolbar_calendar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="serif"
            android:text="出社"
            android:textSize="20sp"
            android:textColor="@color/substitute_middle"/>

    </androidx.appcompat.widget.Toolbar>

    <!--  年月情報  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/primary">

        <TextView
            android:id="@+id/tv_yearMonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            android:fontFamily="serif"
            android:text="2020.05"
            android:textColor="@color/substitute_middle"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/ib_preMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_gravity="end"
            android:background="@color/primary"
            app:srcCompat="@drawable/baseline_chevron_left_24" />

        <ImageButton
            android:id="@+id/ib_nextMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_gravity="end"
            android:background="@color/primary"
            app:srcCompat="@drawable/baseline_chevron_right_24" />

    </LinearLayout>

<!--    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray">
    </View>-->

    <!--  曜日行  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:background="@color/primary">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/week_sunday"
            android:fontFamily="serif"
            android:textAlignment="center"
            android:textColor="@color/substitute_middle"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/week_monday"
            android:fontFamily="serif"
            android:textColor="@color/substitute_middle"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/week_tuesday"
            android:fontFamily="serif"
            android:textColor="@color/substitute_middle"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/week_wednesday"
            android:fontFamily="serif"
            android:textAlignment="center"
            android:textColor="@color/substitute_middle"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/week_thursday"
            android:fontFamily="serif"
            android:textAlignment="center"
            android:textColor="@color/substitute_middle"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/week_friday"
            android:fontFamily="serif"
            android:textAlignment="center"
            android:textColor="@color/substitute_middle"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/week_saturday"
            android:fontFamily="serif"
            android:textAlignment="center"
            android:textColor="@color/substitute_middle"/>

    </LinearLayout>

    <!--  日付  -->
    <GridView
        android:id="@+id/gv_calendar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:numColumns="7"
        android:stretchMode="columnWidth"
        android:verticalSpacing="0dp">
    </GridView>

    <!--  マーク数  -->
    <LinearLayout
        android:id="@+id/ll_markEria"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/substitute_middle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_markNumMonth"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="serif"
                android:text="8"
                android:textSize="24sp"
                android:textColor="@color/substitute_dark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="serif"
                android:text="@string/mark_slash"
                android:textSize="24sp"
                android:textColor="@color/substitute_dark"/>

            <TextView
                android:id="@+id/tv_markNumTotal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="serif"
                android:text="24"
                android:textSize="24sp"
                android:textColor="@color/substitute_dark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:gravity="bottom"
                android:fontFamily="serif"
                android:text="@string/mark_unit"
                android:textSize="16sp"
                android:textColor="@color/substitute_dark"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>