<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/substitute_light"
    tools:context=".MarkListActivity">

    <TextView
        android:id="@+id/tv_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:text="2020.09"
        android:textSize="16sp"
        android:textColor="@color/primary"/>

    <!--  アイコン  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:gravity="end">

        <TextView
            android:id="@+id/tv_markNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/sample_num"
            android:textSize="20sp"
            android:textColor="@color/primary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/mark_unit"
            android:textColor="@color/primary"/>

        <!-- 表示位置調整用文字（必要に応じて表示） -->
        <TextView
            android:id="@+id/tv_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_markRatio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/sample_num"
            android:textSize="20sp"
            android:textColor="@color/primary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mark_ratio_unit"
            android:textColor="@color/primary"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="4dp"
        android:background="@color/substitute_middle">
    </View>

</LinearLayout>